phocas-lustrum/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: phocas-lustrum
  name: phocas-lustrum
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phocas-lustrum
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: phocas-lustrum
    spec:
      containers:
        - image: ghcr.io/rubenhensen/phocas-lustrum-demo:latest
          name: phocas-lustrum
          ports:
            - containerPort: 3000
              protocol: TCP
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "250m"
      restartPolicy: Always
