phocas-lustrum/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: phocas-lustrum
  name: phocas-lustrum
spec:
  ports:
    - name: "http"
      port: 80
      targetPort: 3000
  selector:
    app: phocas-lustrum
