phocas-lustrum/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phocas-lustrum-ingress
  annotations:
    cert-manager.io/cluster-issuer: prod-cluster-issuer
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
    - host: phocaslustrum.rubenhensen.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: phocas-lustrum
                port:
                  number: 80
  tls:
    - secretName: letsencrypt-prod
      hosts:
        - phocaslustrum.rubenhensen.nl
